fixed grid issue completely on mobile

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@
   list-style-type: none;
   padding-top: 1%;
   padding-bottom: 1%;
+  text-align:center;
 }
 .links-body {
   margin-top: 1%;
